# py_blockchain_proof_of_work

./: README.md  pyproject.toml
blockchain/: main.py
examples/: simplified_hashcash.py
