[tool.poetry]
name = "py_blockchain_pow"
version = "0.1.0"
description = ""
authors = ["SergSm <smirnovserg.s@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
